--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<header class='jumbotron masthead'>
 			<div class='container'>
-				<div class='pull-left'>
+				<div class='t-pull-left img-container'>
 					<img class='img-rounded' src='img/tommy.jpg' height='200px' width='auto' />
 				</div>
 				<section>
