Changed email address and added .env to .gitignore

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
 						</div>
 						<div class='panel-body'>
 							<p>On a case-by-case basis, I am available for contract work.  Shoot me an email.</p>
-							<a class='btn btn-warning' href='mailto:thomas.groshong.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> thomas.groshong@gmail.com</a>
+							<a class='btn btn-warning' href='mailto:tgroshon.dev@gmail.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tgroshon.dev@gmail.com</a>
 						</div>
 					</div>
 				</div>
