Change to use new Email address
 - tgroshon from tgroshon.dev

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
 						</a>
 					</li>
 					<li class='twitter'>
-						<a href='https://twitter.com/TommyGroshong' target='_blank' title='Twitter Profile'>
+						<a href='https://twitter.com/tgroshon' target='_blank' title='Twitter Profile'>
 							Twitter
 						</a>
 					</li>
@@ -53,7 +53,7 @@
 						</a>
 					</li>
 					<li class='keybase'>
-						<a href='https://keybase.io/tommygroshong' target='_blank' title='Keybase | PGP Public Key Sharing Service'>
+						<a href='https://keybase.io/tgroshon' target='_blank' title='Keybase | PGP Public Key Sharing Service'>
 							Keybase
 						</a>
 					</li>
@@ -76,7 +76,7 @@
 					  </div>
 					  <div class='panel-body'>
 							<p>Security is always a good idea; but lets be honest, encrypting emails is just fun to do :)</p>
-							<a class='btn btn-success' target='_blank' href='https://keybase.io/tommygroshong/key.asc' title='GPG public key'><span class='glyphicon glyphicon-lock'></span> GPG Public Key</a>
+							<a class='btn btn-success' target='_blank' href='https://keybase.io/tgroshon/key.asc' title='GPG public key'><span class='glyphicon glyphicon-lock'></span> GPG Public Key</a>
 					  </div>
 					</div>
 				</div>
@@ -100,7 +100,7 @@
 						</div>
 						<div class='panel-body'>
 							<p>On a case-by-case basis, I am available for contract work.  Shoot me an email.</p>
-							<a class='btn btn-warning' href='mailto:tgroshon.dev@gmail.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tgroshon.dev@gmail.com</a>
+							<a class='btn btn-warning' href='mailto:tgroshon@gmail.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tgroshon@gmail.com</a>
 						</div>
 					</div>
 				</div>
