--- a/src/index.html
+++ b/src/index.html
@@ -1,120 +1,129 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta content='text/html; charset=utf-8' http-equiv='content-type'/>
-		<meta content='width=device-width, initial-scale=1.0' name='viewport'/>
-		<title>Tommy Groshong</title>
-		<link href='img/tommy.ico' rel='shortcut icon' type='image/x-icon'/>
+  <head>
+    <meta content='text/html; charset=utf-8' http-equiv='content-type'/>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'/>
+    <title>Tommy Groshong</title>
+    <link href='img/tommy.ico' rel='shortcut icon' type='image/x-icon'/>
     <link href='http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css' rel='stylesheet'>
     <link href='http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css' rel='stylesheet'>
     <link href='css/core.css' media='all' rel='stylesheet' type='text/css'/>
-	</head>
-	<body itemscope itemtype='http://schema.org/Person'>
-		<meta itemprop='name' content='Tommy Groshong'/>
-		<meta itemprop='image' content='http://tommygroshong.com/img/tommy.jpg'/>
+  </head>
+  <body itemscope itemtype='http://schema.org/Person'>
+    <meta itemprop='name' content='Tommy Groshong'/>
+    <meta itemprop='image' content='http://tommygroshong.com/img/tommy.jpg'/>
 
-		<header class='jumbotron masthead'>
-			<div class='container'>
-				<div class='t-pull-left img-container'>
-					<img class='img-rounded' src='img/tommy.jpg' height='200px' width='auto' />
-				</div>
-				<section>
-					<h1>Tommy Groshong</h1>
-					<p itemprop='description'>
-						Web Developer and Software Engineer with experience in areas including front-end work with Ember.js and React;
-						Ruby on Rails, Django, and Node.js web applications;
-						and Java servlets and standalone applications.
-					</p>
-				</section>
-			</div>
-		</header>
+    <header class='jumbotron masthead'>
+      <div class='container'>
+        <div class='t-pull-left img-container'>
+          <img class='img-rounded' src='img/tommy.jpg' height='200px' width='auto' />
+        </div>
+        <section>
+          <h1>Tommy Groshong</h1>
+          <p itemprop='description'>
+            Web Developer and Software Engineer with experience in areas including front-end work with Ember.js and React;
+            Ruby on Rails, Django, and Node.js web applications;
+            and Java servlets and standalone applications.
+          </p>
+        </section>
+      </div>
+    </header>
 
-		<div class='social'>
-			<div class='container'>
-				<ul class='social-links'>
-					<li class='linkedin'>
-						<a href='https://www.linkedin.com/pub/thomas-groshong/28/3aa/2b2' target='_blank' title='LinkedIn Profile | Online Resume'>
-							LinkedIn
-						</a>
-					</li>
-					<li class='googleplus'>
-						<a href='https://plus.google.com/u/0/+ThomasGroshong/posts' target='_blank' title='Google+ Profile'>
-							Google+
-						</a>
-					</li>
-					<li class='twitter'>
-						<a href='https://twitter.com/tgroshon' target='_blank' title='Twitter Profile'>
-							Twitter
-						</a>
-					</li>
-					<li class='blog'>
-						<a href='http://codehabitude.com' target='_blank' title='Codehabitude | Blog by Tommy Groshong'>
-							CodeHabitude
-						</a>
-					</li>
-					<li class='keybase'>
-						<a href='https://keybase.io/tgroshon' target='_blank' title='Keybase | PGP Public Key Sharing Service'>
-							Keybase
-						</a>
-					</li>
-					<li class='github'>
-						<a href='https://github.com/tgroshon' target='_blank' title='Github Platform | Open Source Projects'>
-							Github
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
+    <div class='social'>
+      <div class='container'>
+        <ul class='social-links'>
+          <li class='linkedin'>
+            <a href='https://www.linkedin.com/pub/thomas-groshong/28/3aa/2b2' target='_blank' title='LinkedIn Profile | Online Resume'>
+              LinkedIn
+            </a>
+          </li>
+          <li class='googleplus'>
+            <a href='https://plus.google.com/u/0/+ThomasGroshong/posts' target='_blank' title='Google+ Profile'>
+              Google+
+            </a>
+          </li>
+          <li class='twitter'>
+            <a href='https://twitter.com/tgroshon' target='_blank' title='Twitter Profile'>
+              Twitter
+            </a>
+          </li>
+          <li class='blog'>
+            <a href='http://codehabitude.com' target='_blank' title='Codehabitude | Blog by Tommy Groshong'>
+              CodeHabitude
+            </a>
+          </li>
+          <li class='keybase'>
+            <a href='https://keybase.io/tgroshon' target='_blank' title='Keybase | PGP Public Key Sharing Service'>
+              Keybase
+            </a>
+          </li>
+          <li class='github'>
+            <a href='https://github.com/tgroshon' target='_blank' title='Github Platform | Open Source Projects'>
+              Github
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
-		<main class='container'>
-			<div class='row'>
+    <main class='container'>
+      <div class='row'>
 
-				<div class='col-md-4'>
-					<div class='panel panel-default'>
-					  <div class='panel-heading'>
-					    <h3 class='panel-title'>Secure Communication</h3>
-					  </div>
-					  <div class='panel-body'>
-							<p>Security is always a good idea; but lets be honest, encrypting emails is just fun to do :)</p>
-							<a class='btn btn-success' target='_blank' href='https://keybase.io/tgroshon/key.asc' title='GPG public key'><span class='glyphicon glyphicon-lock'></span> GPG Public Key</a>
-					  </div>
-					</div>
-				</div>
+        <div class='col-md-4'>
+          <div class='panel panel-default'>
+            <div class='panel-heading'>
+              <h3 class='panel-title'>Secure Communication</h3>
+            </div>
+            <div class='panel-body'>
+              <p>Security is always a good idea; but lets be honest, encrypting emails is just fun to do :)</p>
+              <a class='btn btn-success' target='_blank' href='https://keybase.io/tgroshon/key.asc' title='GPG public key'><span class='glyphicon glyphicon-lock'></span> GPG Public Key</a>
+            </div>
+          </div>
+        </div>
 
-				<div class='col-md-4'>
-					<div class='panel panel-default'>
-						<div class='panel-heading'>
-							<h3 class='panel-title'>Current Employment</h3>
-						</div>
-						<div class='panel-body'>
-							<p>Software Engineer at Instructure working on a Learning Object Repository in Node.js + React.</p>
-							<a class='btn btn-primary' target='_blank' href='http://www.instructure.com/' title='Instructure Website'><span class='glyphicon glyphicon-briefcase'></span> Instructure.com</a>
-						</div>
-					</div>
-				</div>
+        <div class='col-md-4'>
+          <div class='panel panel-default'>
+            <div class='panel-heading'>
+              <h3 class='panel-title'>Current Employment</h3>
+            </div>
+            <div class='panel-body'>
+              <p>Software Engineer at Instructure working on a Learning Object Repository in Node.js + React.</p>
+              <a class='btn btn-primary' target='_blank' href='http://www.instructure.com/' title='Instructure Website'><span class='glyphicon glyphicon-briefcase'></span> Instructure.com</a>
+            </div>
+          </div>
+        </div>
 
-				<div class='col-md-4'>
-					<div class='panel panel-default'>
-						<div class='panel-heading'>
-							<h3 class='panel-title'>Contract Work</h3>
-						</div>
-						<div class='panel-body'>
-							<p>On a case-by-case basis, I am available for contract work.  Shoot me an email.</p>
-							<a class='btn btn-warning' href='mailto:tgroshon@gmail.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tgroshon@gmail.com</a>
-						</div>
-					</div>
-				</div>
+        <div class='col-md-4'>
+          <div class='panel panel-default'>
+            <div class='panel-heading'>
+              <h3 class='panel-title'>Contract Work</h3>
+            </div>
+            <div class='panel-body'>
+              <p>On a case-by-case basis, I am available for contract work.  Shoot me an email.</p>
+              <a class='btn btn-warning' href='mailto:tgroshon@gmail.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tgroshon@gmail.com</a>
+            </div>
+          </div>
+        </div>
 
-			</div>
-		</main>
+      </div>
+    </main>
 
-		<footer class='footer'>
-			<div class='container'>
-				<div class='pull-right'>Copyright &copy; 2014 Tommy Groshong</div>
-			</div>
-		</footer>
+    <footer class='footer'>
+      <div class='container'>
+        <div class='pull-right'>Copyright &copy; 2014 Tommy Groshong</div>
+      </div>
+    </footer>
 
     <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
     <script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
-	</body>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-47053669-1', 'auto');
+      ga('send', 'pageview');
+    </script>
+  </body>
 </html>
