Update mainpage text for 2018

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,7 @@
         <section>
           <h1>Tommy Groshong</h1>
           <p itemprop='description'>
-            Web Developer and Software Engineer with experience in areas including front-end work with Ember.js and React;
-            Ruby on Rails, Django, and Node.js web applications;
-            and Java servlets and standalone applications.
+            Business Leader and Software Engineer with expertise building enterprise web applications and organizing agile development teams.
           </p>
         </section>
       </div>
@@ -37,9 +35,9 @@
               LinkedIn
             </a>
           </li>
-          <li class='googleplus'>
-            <a href='https://plus.google.com/u/0/+ThomasGroshong/posts' target='_blank' title='Google+ Profile'>
-              Google+
+          <li class='github'>
+            <a href='https://github.com/tgroshon' target='_blank' title='Github Platform | Open Source Projects'>
+              Github
             </a>
           </li>
           <li class='twitter'>
@@ -49,17 +47,12 @@
           </li>
           <li class='blog'>
             <a href='http://codehabitude.com' target='_blank' title='Codehabitude | Blog by Tommy Groshong'>
-              CodeHabitude
+              Blog
             </a>
           </li>
           <li class='keybase'>
             <a href='https://keybase.io/tgroshon' target='_blank' title='Keybase | PGP Public Key Sharing Service'>
               Keybase
-            </a>
-          </li>
-          <li class='github'>
-            <a href='https://github.com/tgroshon' target='_blank' title='Github Platform | Open Source Projects'>
-              Github
             </a>
           </li>
         </ul>
@@ -68,6 +61,29 @@
 
     <main class='container'>
       <div class='row'>
+        <div class='col-md-4'>
+          <div class='panel panel-default'>
+            <div class='panel-heading'>
+              <h3 class='panel-title'>Employment</h3>
+            </div>
+            <div class='panel-body'>
+              <p>VP Engineering at MyEducator; an EduTech platform publishing educational content to universities and students around the world.</p>
+              <a class='btn btn-primary' target='_blank' href='https://www.myeducator.com/' title='MyEducator Website'><span class='glyphicon glyphicon-briefcase'></span> MyEducator.com</a>
+            </div>
+          </div>
+        </div>
+
+        <div class='col-md-4'>
+          <div class='panel panel-default'>
+            <div class='panel-heading'>
+              <h3 class='panel-title'>Consulting</h3>
+            </div>
+            <div class='panel-body'>
+              <p>Contact me via my consulting organization 7Pool Systems.</p>
+              <a class='btn btn-warning' href='mailto:tom@7poolsystems.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tom@7poolsystems.com</a>
+            </div>
+          </div>
+        </div>
 
         <div class='col-md-4'>
           <div class='panel panel-default'>
@@ -75,42 +91,17 @@
               <h3 class='panel-title'>Secure Communication</h3>
             </div>
             <div class='panel-body'>
-              <p>Security is always a good idea; but lets be honest, encrypting emails is just fun to do :)</p>
+              <p>Security is always a good idea; plus encrypting emails is just fun to do.</p>
               <a class='btn btn-success' target='_blank' href='https://keybase.io/tgroshon/key.asc' title='GPG public key'><span class='glyphicon glyphicon-lock'></span> GPG Public Key</a>
             </div>
           </div>
         </div>
-
-        <div class='col-md-4'>
-          <div class='panel panel-default'>
-            <div class='panel-heading'>
-              <h3 class='panel-title'>Current Employment</h3>
-            </div>
-            <div class='panel-body'>
-              <p>Software Engineer at Instructure working on a Learning Object Repository in Node.js + React.</p>
-              <a class='btn btn-primary' target='_blank' href='http://www.instructure.com/' title='Instructure Website'><span class='glyphicon glyphicon-briefcase'></span> Instructure.com</a>
-            </div>
-          </div>
-        </div>
-
-        <div class='col-md-4'>
-          <div class='panel panel-default'>
-            <div class='panel-heading'>
-              <h3 class='panel-title'>Contract Work</h3>
-            </div>
-            <div class='panel-body'>
-              <p>On a case-by-case basis, I am available for contract work.  Shoot me an email.</p>
-              <a class='btn btn-warning' href='mailto:tgroshon@gmail.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tgroshon@gmail.com</a>
-            </div>
-          </div>
-        </div>
-
       </div>
     </main>
 
     <footer class='footer'>
       <div class='container'>
-        <div class='pull-right'>Copyright &copy; 2014 Tommy Groshong</div>
+        <div class='pull-right'>Copyright &copy; 2018 Tommy Groshong</div>
       </div>
     </footer>
 
