--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <section>
           <h1>Tommy Groshong</h1>
           <p itemprop='description'>
-            Business Leader and Software Engineer with expertise building enterprise web applications and organizing agile development teams.
+            Business Leader, Software Developer, and DevOps professional with expertise building enterprise web applications and organizing agile development teams.
           </p>
         </section>
       </div>
@@ -45,11 +45,6 @@
               Twitter
             </a>
           </li>
-          <li class='blog'>
-            <a href='http://codehabitude.com' target='_blank' title='Codehabitude | Blog by Tommy Groshong'>
-              Blog
-            </a>
-          </li>
           <li class='keybase'>
             <a href='https://keybase.io/tgroshon' target='_blank' title='Keybase | PGP Public Key Sharing Service'>
               Keybase
@@ -64,7 +59,7 @@
         <div class='col-md-4'>
           <div class='panel panel-default'>
             <div class='panel-heading'>
-              <h3 class='panel-title'>Employment</h3>
+              <h3 class='panel-title'>Recent Work</h3>
             </div>
             <div class='panel-body'>
               <p>VP Engineering at MyEducator; an EduTech platform publishing educational content to universities and students around the world.</p>
@@ -79,8 +74,8 @@
               <h3 class='panel-title'>Consulting</h3>
             </div>
             <div class='panel-body'>
-              <p>Contact me via my consulting organization 7Pool Systems.</p>
-              <a class='btn btn-warning' href='mailto:tom@7poolsystems.com' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tom@7poolsystems.com</a>
+              <p>Contact me via my consulting organization "Groshong Software Services LLC".</p>
+              <a class='btn btn-warning' href='mailto:tom@groshong.software' title='Email Address'><span class='glyphicon glyphicon-envelope'></span> tom@groshong.software</a>
             </div>
           </div>
         </div>
